--- a/css/auth-style.css
+++ b/css/auth-style.css
@@ -89,3 +89,18 @@
       display: flex;
       align-items: center;
     }
+
+    /* Password strength indicator */
+    .password-strength {
+      height: 5px;
+      margin-top: 0.25rem;
+      background-color: #e9ecef;
+      border-radius: 3px;
+      overflow: hidden;
+    }
+
+    .password-strength-bar {
+      height: 100%;
+      width: 0%;
+      transition: width 0.3s ease;
+    }
